@@ -96,7 +96,7 @@
                     enctype="application/x-www-form-urlencoded"
                      method="post" name="markdown">
                   <span class="tips" title="[% title %]">
-                     <button class="btn btn-subit fade submit" id="delete-file"
+                     <button class="btn fade submit" id="delete-file"
                               name="_method" type="submit"
                              value="delete_file">[% text %]</button></span>
                </form>
